# gb_taxonomy_tools

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
src/: gid-taxid.c  taxonomy2tree.c  taxonomy_reader.c  tree2ps.c
src/include/: buffers.h  taxinfo.h
src/util/: buffers.c  taxinfo.c
test/data/: PFSU_all_nt_hits2.txt  test.gid  test.taxid  test.taxonomy  test.tree  test_summary.txt  tree1.ps  tree2.ps  tree3.ps
